# cookiecutter-gemseo

./: README.rst  cookiecutter.json
gemseo-{{cookiecutter.plugin_name_suffix}}/: .gitignore  CREDITS.rst  setup.cfg
gemseo-{{cookiecutter.project_name_suffix}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CREDITS.rst  README.rst  setup.cfg  tox.ini
