[metadata]
name = gemseo-{{cookiecutter.project_name_suffix}}
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
url = https://www.irt-saintexupery.com
description = {{cookiecutter.project_short_description}}
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.6, <3.10
install_requires =
    gemseo >={{cookiecutter.gemseo_min_version}}

[options.packages.find]
where = src

[options.extras_require]
# dependencies for testing
test =
    # This constraint is required for the current version of commitizen,
    # remove it for the next update.
    packaging <21
    pytest
    pytest-cov
    pytest-xdist

{% if cookiecutter.package_is_a_gemseo_plugin == "yes" %}
[options.entry_points]
gemseo_plugins =
    gemseo-{{cookiecutter.project_name_suffix}} = {{cookiecutter.project_slug}}
{% endif %}

# tools settings

[tool:pytest]
testpaths = tests
addopts =
    --disable-pytest-warnings
     # show extra info on xfailed, xpassed, and skipped tests
    -rxs

[coverage:run]
branch = True
source = {{cookiecutter.project_slug}}

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    plt.show()
    pylab.plt.show()

[flake8]
# See http://www.pydocstyle.org/en/latest/error_codes.html for more details.
# https://github.com/PyCQA/flake8-bugbear#how-to-enable-opinionated-warnings
ignore =
    E501
    # no docstring for standard and private methods
    D105
    E203
    W503
select = B,C,D,E,F,G,N,T,W,B950
# settings for compatibility with black, see
# https://github.com/psf/black/blob/master/docs/compatible_configs.md#flake8
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=bugbear#line-length
max-line-length = 88
docstring-convention = google
per-file-ignores =
    tests/*.py:D100
